# ChangeLog for mail-filter/qmail-scanner
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.5 2004/08/09 08:25:54 robbat2 Exp $

  09 Aug 2004; Robin H. Johnson <robbat2@gentoo.org>
  qmail-scanner-1.22-r1.ebuild:
  Ignore setuid test, IMPORTANT to work under perl-5.8.4-r1.

  29 Jul 2004; Lim Swee Tat <st_lim@gentoo.org> qmail-scanner-1.16-r2.ebuild,
  qmail-scanner-1.22-r1.ebuild:
  Fixed bug #57599, by installing the contrib files via dodoc.

*qmail-scanner-1.22-r1 (17 Jul 2004)

  17 Jul 2004; Lim Swee Tat <st_lim@gentoo.org> +qmail-scanner-1.22-r1.ebuild:
  - Transfered over to the mail-filter category - Added qmail-scanner-1.22 -
  Using the qmail-scanner-st patch that allows for more options at qmail-scanner
  - TODO: Add dspam to qmail-scanner

  17 Jul 2004; Lim Swee Tat <st_lim@gentoo.org> +metadata.xml,
  +files/qmail-scanner-queue.pl.patch, +files/qmailscanner.cronjob,
  +files/qmailscanner.logrotate, +qmail-scanner-1.16-r1.ebuild,
  +qmail-scanner-1.16-r2.ebuild:
  Moved from net-mail/qmail-scanner to mail-filter/qmail-scanner.

  03 Jun 2004; Seemant Kulleen <seemant@gentoo.org>
  qmail-scanner-1.16-r1.ebuild, qmail-scanner-1.16.ebuild:
  Change DEPENDency from net-mail/maildrop to mail-filter/maildrop

  24 Apr 2004; Robin H. Johnson <robbat2@gentoo.org>
  qmail-scanner-1.16-r2.ebuild, qmail-scanner-1.20.ebuild:
  bug #48628, accept various other qmail's as well

*qmail-scanner-1.20 (28 Jan 2004)

  28 Jan 2004; Robin H. Johnson <robbat2@gentoo.org>
  qmail-scanner-1.20.ebuild, files/qmail-scanner-queue.pl.patch,
  files/qmailscanner.cronjob, files/qmailscanner.logrotate:
  Version bump, bugs #38065, #39670. This software seems very touchy at the
  moment, it doesn't fail gracefully and so qmail can loose mail if anything is
  wrong!

  26 Dec 2003; Jason Wever <weeve@gentoo.org> qmail-scanner-1.16.ebuild:
  Masked on sparc as f-prot does not work on sparc.