@@ -1,13 +1,15 @@
 MD5 792e9b596d840233436101caf6c106f5 qmail-scanner-1.16.ebuild 2563
 MD5 92c45eef552c016e9bb044d8f8accd25 qmail-scanner-1.16-r1.ebuild 2565
-MD5 ea2a3f49f374862d2e832f0691d9ef3b qmail-scanner-1.22-r1.ebuild 4854
+MD5 d4b039fe9efe1514186502e8c5ba0d61 qmail-scanner-1.22-r1.ebuild 4890
 MD5 7321b01e7d7a3fb311f6f892ed290f50 qmail-scanner-1.16-r2.ebuild 2314
+MD5 d4b039fe9efe1514186502e8c5ba0d61 qmail-scanner-1.23.ebuild 4890
 MD5 27eec415dad76beddd9f348e6acadf87 ChangeLog 3455
 MD5 5721b86fd871bdfab77231abc6e02f68 metadata.xml 161
 MD5 beb74fb9980c2a0c58171cc7198862ca qmail-scanner-1.20.ebuild 4404
 MD5 6f6fc9e3db3985ba4ae5a6203d2d6abf files/qmailscanner.cronjob 50
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16 67
 MD5 797efb400e5d84070bd2237518cff4ba files/digest-qmail-scanner-1.20 67
+MD5 3fa63560e99f7a3a41192e99d7297c2c files/digest-qmail-scanner-1.23 139
 MD5 055c5ac64c689a669b8ccd6bc5f6553d files/qmailscanner.logrotate 147
 MD5 1d80eca1d4792a4073f51eb59f02960b files/qmail-scanner-queue.pl.patch 240
 MD5 21cbccfc2015bf74d509a5b329ef4b30 files/digest-qmail-scanner-1.16-r1 67
