@@ -1,0 +1,2 @@
+MD5 d16e912b89126b2d957f86bf78d52be5 qmail-scanner-1.23.tgz 153107
+MD5 003475e4af669eba5b1de46885ddc863 q-s-1.22st-20040606.patch.gz 78654
