@@ -1,6 +1,12 @@
 # ChangeLog for mail-filter/qmail-scanner
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.5 2004/08/09 08:25:54 robbat2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/mail-filter/qmail-scanner/ChangeLog,v 1.6 2004/08/14 21:53:44 robbat2 Exp $
+
+*qmail-scanner-1.23 (14 Aug 2004)
+
+  14 Aug 2004; Robin H. Johnson <robbat2@gentoo.org> +qmail-scanner-1.23:
+  Add new version, add more virii. Bug 60201. Spamassassin support NOT yet
+  available.
 
   09 Aug 2004; Robin H. Johnson <robbat2@gentoo.org>
   qmail-scanner-1.22-r1.ebuild:
